discussion/kv_engine/165100/165100_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-49348: Correct logical clock race in setting CAS

Currently two threads using the logical clock CAS mode can race and
use the same CAS value. This means that two different documents (as
we currently only call this while holding a HashBucketLock) for the
same vBucket can have the same CAS value.

Change-Id: Iea6a1b1e03eec55f6fa3b02ff0a694e7ea882ff6

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2021-11-04 20:14:03.000000000
Message: 
Uploaded patch set 3.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-11-04 20:37:46.000000000
Message: 
Patch Set 3: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/41572/ : FAILURE

Timeout of a CTest test 416/416 Test #188: ep-engine_ep_unit_tests.CompressionStreamTest/CompressionStreamTest ...........................................................} ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/41572/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13817/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/hlc_test.cc:49:10: warning: annotate this function with "override" or (rarely) "final" [modernize-use-override]
    void SetUp() {
         ^
                 override
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/hlc_test.cc:67:24: error: no member named "thread" in namespace "std" [clang-diagnostic-error]
    auto thread = std::thread(
                       ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13817/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/hlc_test.cc:67:24:
error: no member named "thread" in namespace "std" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13817/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/16400/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/3451/ : FAILURE

Compile error at [2021-11-04T20:15:09.418Z] ../kv_engine/engines/ep/tests/module_tests/hlc_test.cc:67:24:
error: no member named "thread" in namespace "std"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/3451/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/35299/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/12618/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/15432/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/15715/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/14594/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/23770/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/3523/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
